--- a/ElectronicDiary/MainWindow.xaml
+++ b/ElectronicDiary/MainWindow.xaml
@@ -135,14 +135,14 @@
                 <Button x:Name="AdminPanelSchedulesRemoveSchedule" Content="Remove lesson" HorizontalAlignment="Left" Margin="82,188,0,0" VerticalAlignment="Top" Width="210" Height="51" Click="AdminPanelSchedulesRemoveSchedule_Click"/>
                 <Button x:Name="AdminPanelSchedulesAddSchedule" Content="Add lesson" HorizontalAlignment="Left" Margin="82,10,0,0" VerticalAlignment="Top" Width="210" Height="51" Click="AdminPanelSchedulesAddSchedule_Click"/>
             </Grid>
-            <Grid x:Name="AdminSchedulesPanel" HorizontalAlignment="Left" Height="349" Margin="558,62,0,0" VerticalAlignment="Top" Width="387" d:IsHidden="True">
+            <Grid x:Name="AdminSchedulesPanel" HorizontalAlignment="Left" Height="349" Margin="558,62,0,0" VerticalAlignment="Top" Width="387">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="95*"/>
                     <ColumnDefinition Width="10*"/>
                     <ColumnDefinition Width="213*"/>
                     <ColumnDefinition Width="69*"/>
                 </Grid.ColumnDefinitions>
-                <Label HorizontalAlignment="Left" Margin="47,6,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.305,0.471" Content="Group:" Height="28" Width="50" Grid.ColumnSpan="2">
+                <Label HorizontalAlignment="Left" Margin="49,4,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.305,0.471" Content="Group:" Height="28" Width="50" Grid.ColumnSpan="2">
                     <Label.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform/>
@@ -152,30 +152,31 @@
                         </TransformGroup>
                     </Label.RenderTransform>
                 </Label>
-                <ComboBox x:Name="AdminPanelScheduleGroupCombobox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="222" SelectionChanged="AdminPanelScheduleGroupCombobox_SelectionChanged" Grid.Column="1" Height="30" Grid.ColumnSpan="2"/>
+                <ComboBox x:Name="AdminPanelScheduleGroupCombobox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="212" SelectionChanged="AdminPanelScheduleGroupCombobox_SelectionChanged" Grid.Column="2" Height="30"/>
                 <Grid x:Name="EditScheduleButtonsForm" HorizontalAlignment="Left" Height="129" Margin="5,43,0,0" VerticalAlignment="Top" Width="312" Grid.ColumnSpan="3" d:IsHidden="True">
                     <Button x:Name="EditScheduleButtonBackPanel" Content="Back" HorizontalAlignment="Left" Margin="147,29,0,0" VerticalAlignment="Top" Width="75" Click="EditScheduleButtonBackPanel_Click"/>
                 </Grid>
-                <Grid x:Name="EditScheduleForm" HorizontalAlignment="Left" Height="311" VerticalAlignment="Top" Width="400" Margin="-13,38,0,0" Grid.ColumnSpan="4" d:IsHidden="True">
+                <Grid x:Name="EditScheduleForm" HorizontalAlignment="Left" Height="311" VerticalAlignment="Top" Width="400" Margin="-13,38,0,0" Grid.ColumnSpan="4">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="108*"/>
-                        <ColumnDefinition Width="221*"/>
+                        <ColumnDefinition Width="10*"/>
+                        <ColumnDefinition Width="211*"/>
                         <ColumnDefinition Width="71*"/>
                     </Grid.ColumnDefinitions>
-                    <TextBox x:Name="AdminScheduleEditTextBox" HorizontalAlignment="Left" Height="22" TextWrapping="Wrap" VerticalAlignment="Top" Width="221" Grid.Column="1" Margin="0,43,0,0"/>
-                    <Label Content="Lesson number:" HorizontalAlignment="Left" Margin="6,45,0,0" VerticalAlignment="Top"/>
-                    <Label Content="Subject:" HorizontalAlignment="Left" Margin="49,194,0,0" VerticalAlignment="Top"/>
-                    <ComboBox x:Name="AdminPanelEditScheduleSubjectCombobox" HorizontalAlignment="Left" Margin="0,192,0,0" VerticalAlignment="Top" Width="221" Grid.Column="1"/>
-                    <Label Content="Teacher:" HorizontalAlignment="Left" Margin="49,146,0,0" VerticalAlignment="Top"/>
-                    <ComboBox x:Name="AdminPanelEditScheduleTeacherCombobox" HorizontalAlignment="Left" Margin="0,144,0,0" VerticalAlignment="Top" Width="221" Grid.Column="1"/>
-                    <Label Content="Week day:" HorizontalAlignment="Left" Margin="37,94,0,0" VerticalAlignment="Top"/>
-                    <ComboBox x:Name="AdminPanelEditScheduleWeekDayCombobox" HorizontalAlignment="Left" Margin="0,92,0,0" VerticalAlignment="Top" Width="221" Grid.Column="1"/>
-                    <Button x:Name="EditScheduleButtonBack" Content="Back" HorizontalAlignment="Left" Margin="0,281,0,0" VerticalAlignment="Top" Width="99" Click="EditScheduleButtonBack_Click" Grid.Column="1"/>
-                    <Button x:Name="EditScheduleButtonSave" Content="Save" HorizontalAlignment="Left" Margin="122,281,0,0" VerticalAlignment="Top" Width="99" Click="EditScheduleButtonSave_Click" Grid.Column="1"/>
-                    <TextBox x:Name="AdminScheduleEditDescriptionTextBox" HorizontalAlignment="Left" Height="22" Margin="0,239,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="221" Grid.Column="1"/>
-                    <Label Content="Description:" HorizontalAlignment="Left" Margin="28,239,0,0" VerticalAlignment="Top"/>
-                    <ComboBox x:Name="EditScheduleLessonIdCombobox" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="221" SelectionChanged="EditScheduleLessonIdCombobox_SelectionChanged"/>
-                    <Label Content="Lesson Id:" HorizontalAlignment="Left" Margin="37,2,0,0" VerticalAlignment="Top"/>
+                    <TextBox x:Name="AdminScheduleEditTextBox" HorizontalAlignment="Left" Height="22" TextWrapping="Wrap" VerticalAlignment="Top" Width="211" Grid.Column="2" Margin="0,43,0,0"/>
+                    <Label Content="Lesson number:" HorizontalAlignment="Left" Margin="11,43,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+                    <Label Content="Subject:" HorizontalAlignment="Left" Margin="52,194,0,0" VerticalAlignment="Top"/>
+                    <ComboBox x:Name="AdminPanelEditScheduleSubjectCombobox" HorizontalAlignment="Left" Margin="0,192,0,0" VerticalAlignment="Top" Width="211" Grid.Column="2"/>
+                    <Label Content="Teacher:" HorizontalAlignment="Left" Margin="54,144,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+                    <ComboBox x:Name="AdminPanelEditScheduleTeacherCombobox" HorizontalAlignment="Left" Margin="0,144,0,0" VerticalAlignment="Top" Width="211" Grid.Column="2"/>
+                    <Label Content="Week day:" HorizontalAlignment="Left" Margin="42,92,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+                    <ComboBox x:Name="AdminPanelEditScheduleWeekDayCombobox" HorizontalAlignment="Left" Margin="0,92,0,0" VerticalAlignment="Top" Width="211" Grid.Column="2"/>
+                    <Button x:Name="EditScheduleButtonBack" Content="Back" HorizontalAlignment="Left" Margin="0,281,0,0" VerticalAlignment="Top" Width="99" Click="EditScheduleButtonBack_Click" Grid.Column="1" Grid.ColumnSpan="2"/>
+                    <Button x:Name="EditScheduleButtonSave" Content="Save" HorizontalAlignment="Left" Margin="112,281,0,0" VerticalAlignment="Top" Width="99" Click="EditScheduleButtonSave_Click" Grid.Column="2"/>
+                    <TextBox x:Name="AdminScheduleEditDescriptionTextBox" HorizontalAlignment="Left" Height="22" Margin="0,239,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="211" Grid.Column="2"/>
+                    <Label Content="Description:" HorizontalAlignment="Left" Margin="33,239,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+                    <ComboBox x:Name="EditScheduleLessonIdCombobox" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Top" Width="211" SelectionChanged="EditScheduleLessonIdCombobox_SelectionChanged"/>
+                    <Label Content="Lesson Id:" HorizontalAlignment="Left" Margin="45,0,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
                 </Grid>
                 <Grid x:Name="AddScheduleForm" HorizontalAlignment="Left" Height="301" Margin="0,38,0,0" VerticalAlignment="Top" Width="368" Grid.ColumnSpan="4" d:IsHidden="True">
                     <Grid.ColumnDefinitions>
@@ -196,11 +197,15 @@
                     <Label Content="Description:" HorizontalAlignment="Left" Margin="22,207,0,0" VerticalAlignment="Top"/>
                     <ComboBox x:Name="AdminScheduleNumber" HorizontalAlignment="Left" Margin="0,60,0,0" VerticalAlignment="Top" Width="213" Grid.Column="1"/>
                 </Grid>
-                <Grid x:Name="RemoveScheduleForm" HorizontalAlignment="Left" Height="258" VerticalAlignment="Top" Width="341" Margin="-24,38,0,0" Grid.ColumnSpan="3">
+                <Grid x:Name="RemoveScheduleForm" HorizontalAlignment="Left" Height="258" VerticalAlignment="Top" Width="341" Margin="-24,38,0,0" Grid.ColumnSpan="3" d:IsHidden="True">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="129*"/>
+                        <ColumnDefinition Width="212*"/>
+                    </Grid.ColumnDefinitions>
                     <Label Content="Lesson Id:" HorizontalAlignment="Left" Margin="51,10,0,0" VerticalAlignment="Top"/>
-                    <Button x:Name="RemoveScheduleButtonBack" Content="Back" HorizontalAlignment="Left" Margin="119,65,0,0" VerticalAlignment="Top" Width="100" Click="RemoveScheduleButtonBack_Click"/>
-                    <Button x:Name="RemoveScheduleButtonDelete" Content="Delete" HorizontalAlignment="Left" Margin="241,65,0,0" VerticalAlignment="Top" Width="100" Click="RemoveScheduleButtonDelete_Click"/>
-                    <ComboBox x:Name="AdminPanelRemoveScheduleLessonCombobox" HorizontalAlignment="Left" Margin="119,10,0,0" VerticalAlignment="Top" Width="222"/>
+                    <Button x:Name="RemoveScheduleButtonBack" Content="Back" HorizontalAlignment="Left" Margin="0,65,0,0" VerticalAlignment="Top" Width="96" Click="RemoveScheduleButtonBack_Click" Grid.Column="1"/>
+                    <Button x:Name="RemoveScheduleButtonDelete" Content="Delete" HorizontalAlignment="Left" Margin="116,65,0,0" VerticalAlignment="Top" Width="96" Click="RemoveScheduleButtonDelete_Click" Grid.Column="1"/>
+                    <ComboBox x:Name="AdminPanelRemoveScheduleLessonCombobox" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Width="212" Grid.Column="1"/>
                 </Grid>
             </Grid>
         </Grid>
